--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@
     enable = false
     
 [[redirects]]
-  from = "https://somenetlifysite.netlify.app"
-  to = "https://mycustomdomain.com"
+  from = "https://candid-conkies-e99d17.netlify.app"
+  to = "http://thesmmgal.net"
   status = 301
   force = true
