--- a/netlify.toml
+++ b/netlify.toml
@@ -14,7 +14,7 @@
 
 
 [[redirects]]
-  from = "https://somenetlifysite.netlify.app"
-  to = "https://mycustomdomain.com"
+  from = "https://mellifluous-fudge-1ff812.netlify.app"
+  to = "https://thesmmgal.net"
   status = 301
   force = true
