--- a/netlify.toml
+++ b/netlify.toml
@@ -14,7 +14,7 @@
 
 
 [[redirects]]
-  from = "https://mellifluous-fudge-1ff812.netlify.app"
-  to = "https://thesmmgal.net"
+  from = "/*"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fdavidquintanaw%2Fdense-memes-for-your-site"
   status = 301
   force = true
