--- a/netlify.toml
+++ b/netlify.toml
@@ -20,7 +20,7 @@
   force = true
 
 [[redirects]]
-  from = "/1/*"
+  from = "/1/"
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dtheory%2520assignment%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dtheory%2520assignment"
   status = 301
   force = true
