--- a/netlify.toml
+++ b/netlify.toml
@@ -14,7 +14,7 @@
 
 
 [[redirects]]
-  from = "/*"
+  from = "/"
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fcoach_ras%2Fedit-and-rewrite-your-resume-cover-letter-and-linkedin-fast"
   status = 301
   force = true
