--- a/netlify.toml
+++ b/netlify.toml
@@ -39,3 +39,10 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dmonte%2520carlo%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dmonte%2520carlo"
   status = 301
   force = true
+  
+  
+  [[redirects]]
+  from = "/4/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3DInterior%2520Design%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dinterior%2520design"
+  status = 301
+  force = true
