--- a/netlify.toml
+++ b/netlify.toml
@@ -60,3 +60,8 @@
   status = 301
   force = true
 
+  [[redirects]]
+  from = "/7/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dspanish%2520translator%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dspanish%2520translator"
+  status = 301
+  force = true
