--- a/netlify.toml
+++ b/netlify.toml
@@ -71,3 +71,11 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dmusic%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dmusic"
   status = 301
   force = true
+
+
+
+ [[redirects]]
+  from = "/9/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dpower%2520bi%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dpower%2520bi"
+  status = 301
+  force = true
