--- a/netlify.toml
+++ b/netlify.toml
@@ -72,10 +72,14 @@
   status = 301
   force = true
 
-
-
  [[redirects]]
   from = "/9/"
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dpower%2520bi%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dpower%2520bi"
+  status = 301
+  force = true
+  
+  [[redirects]]
+  from = "/10/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dcaricature%2520painting%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dcaricature%2520painting"
   status = 301
   force = true
