--- a/netlify.toml
+++ b/netlify.toml
@@ -32,8 +32,6 @@
   status = 301
   force = true
 
-
-
 [[redirects]]
   from = "/3/"
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dmonte%2520carlo%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dmonte%2520carlo"
@@ -81,5 +79,12 @@
   [[redirects]]
   from = "/10/"
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dcaricature%2520painting%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dcaricature%2520painting"
+  status = 301
+  force = true
+  
+
+[[redirects]]
+  from = "/11/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dcontent%2520creators%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dcontent%2520creators"
   status = 301
   force = true
