--- a/netlify.toml
+++ b/netlify.toml
@@ -88,3 +88,9 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dcontent%2520creators%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dcontent%2520creators"
   status = 301
   force = true
+  
+  [[redirects]]
+  from = "/12/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3DYoutube%2520script%2520writer%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dyoutube%2520script%2520writer"
+  status = 301
+  force = true
