--- a/netlify.toml
+++ b/netlify.toml
@@ -81,7 +81,6 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dcaricature%2520painting%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dcaricature%2520painting"
   status = 301
   force = true
-  
 
 [[redirects]]
   from = "/11/"
@@ -92,5 +91,11 @@
   [[redirects]]
   from = "/12/"
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3DYoutube%2520script%2520writer%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dyoutube%2520script%2520writer"
+  status = 301
+  force = true
+  
+  [[redirects]]
+  from = "/13/"
+  to = "https://www.fiverr.com/search/gigs?query=film%20sound&source=top-bar&search_in=everywhere&search-autocomplete-original-term=film%20sound"
   status = 301
   force = true
