--- a/netlify.toml
+++ b/netlify.toml
@@ -99,3 +99,9 @@
   to = "https://www.fiverr.com/search/gigs?query=film%20sound&source=top-bar&search_in=everywhere&search-autocomplete-original-term=film%20sound"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/14/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dwall%2520paper%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dwall%2520paper"
+  status = 301
+  force = true
