--- a/netlify.toml
+++ b/netlify.toml
@@ -142,3 +142,9 @@
   status = 301
   force = true
   
+  
+  [[redirects]]
+  from = "/21/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dshoppy%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dshoppy"
+  status = 301
+  force = true
