--- a/netlify.toml
+++ b/netlify.toml
@@ -165,3 +165,9 @@
   to = "https://f0e70et2xet9ws-gohwy-mkp1x.hop.clickbank.net/?tid=8"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/24/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsidrajb%2Fmake-forrest-plots-for-you"
+  status = 301
+  force = true
