--- a/netlify.toml
+++ b/netlify.toml
@@ -167,7 +167,13 @@
   force = true
 
   [[redirects]]
-  from = "/24/"
+  from = "/25/"
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsidrajb%2Fmake-forrest-plots-for-you"
+  status = 301
+  force = true
+
+  [[redirects]]
+  from = "/26/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fprosanto7%2Fdo-java-project-java-assignment-and-java-swing-task-using-netbeans-intellij"
   status = 301
   force = true
