--- a/netlify.toml
+++ b/netlify.toml
@@ -195,3 +195,9 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fbeforeverly%2Fwrite-a-custom-job-offer-letter-for-you"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/30/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsazrah4life%2Frecord-your-female-voice-over-with-british-accent"
+  status = 301
+  force = true
