--- a/netlify.toml
+++ b/netlify.toml
@@ -219,3 +219,9 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dcontent%2520creation%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dcontent%2520creation"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/34/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dflag%2520design%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dflag%2520design"
+  status = 301
+  force = true
