--- a/netlify.toml
+++ b/netlify.toml
@@ -237,3 +237,10 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dradiant%2520coaching%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dradiant%2520coaching"
   status = 301
   force = true
+  
+  [[redirects]]
+  from = "/37/"
+  to = "https://amzn.to/3nEVJDu"
+  status = 301
+  force = true
+  
