--- a/netlify.toml
+++ b/netlify.toml
@@ -244,3 +244,8 @@
   status = 301
   force = true
   
+  [[redirects]]
+  from = "/38/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dsims%25204%2520mod%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dsims%25204%2520mod"
+  status = 301
+  force = true
