--- a/netlify.toml
+++ b/netlify.toml
@@ -255,3 +255,10 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dtwitch%2520logo%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dtwitch%2520logo"
   status = 301
   force = true
+  
+  [[redirects]]
+  from = "/40/"
+  to = "https://amzn.to/3aezssZ"
+  status = 301
+  force = true
+  
