--- a/netlify.toml
+++ b/netlify.toml
@@ -267,3 +267,9 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dresume%2520writing%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dresume%2520writing"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/42/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fnwcoast90%2Ftranslate-japanese-to-english-or-english-to-japanese-7960"
+  status = 301
+  force = true
