--- a/netlify.toml
+++ b/netlify.toml
@@ -273,3 +273,9 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fnwcoast90%2Ftranslate-japanese-to-english-or-english-to-japanese-7960"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/43/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fexpert_arbaz%2Fwrite-veterinary-and-pets-articles-and-blogposts"
+  status = 301
+  force = true
