--- a/netlify.toml
+++ b/netlify.toml
@@ -279,3 +279,9 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fexpert_arbaz%2Fwrite-veterinary-and-pets-articles-and-blogposts"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/44/"
+  to = "https://amzn.to/3P3JI6d"
+  status = 301
+  force = true
