--- a/netlify.toml
+++ b/netlify.toml
@@ -291,3 +291,9 @@
   to = "https://259c6dp7rqq6y469356nfr6k7k.hop.clickbank.net/?tid=11"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/46/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dhealth%2520writer%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dhealth%2520writer"
+  status = 301
+  force = true
