--- a/netlify.toml
+++ b/netlify.toml
@@ -315,3 +315,9 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dessay%2520writing%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dessay%2520writing"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/50/"
+  to = "https://amzn.to/3yRm47T"
+  status = 301
+  force = true
