--- a/netlify.toml
+++ b/netlify.toml
@@ -327,3 +327,9 @@
   to = "https://5dac7qnzthq-0222ggipuev03x.hop.clickbank.net/?tid=12"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/52/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dubuntu%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dubuntu"
+  status = 301
+  force = true
