--- a/netlify.toml
+++ b/netlify.toml
@@ -339,3 +339,9 @@
   to = "https://amzn.to/3umxRbC"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/54/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dillustrator%2520tutor%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dillustrator%2520tutor"
+  status = 301
+  force = true
