--- a/netlify.toml
+++ b/netlify.toml
@@ -351,3 +351,9 @@
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dmoroccan%2520dialect%2520tutor%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dmoroccan%2520dialect%2520tutor"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/56/"
+  to = "https://59086gqbtjh9zy5csfoco4sr6f.hop.clickbank.net/?tid=1"
+  status = 301
+  force = true
