--- a/netlify.toml
+++ b/netlify.toml
@@ -393,3 +393,9 @@
   to = "https://amzn.to/3AXnnSq"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/63/"
+  to = "https://amzn.to/3Qyg2OV"
+  status = 301
+  force = true
