--- a/netlify.toml
+++ b/netlify.toml
@@ -477,3 +477,9 @@
   to = "https://file-locker.eu/iframe/b0ab1240-3414-11ed-b642-853d32966d6a?"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/77/"
+  to = "https://unlockedhub.club/06e25d1"
+  status = 301
+  force = true
