--- a/netlify.toml
+++ b/netlify.toml
@@ -483,3 +483,10 @@
   to = "https://unlockedhub.club/06e25d1"
   status = 301
   force = true
+  
+  [[redirects]]
+  from = "/78/"
+  to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dessay%2520writing%26source%3Dtop-bar"
+  status = 301
+  force = true
+  
