--- a/netlify.toml
+++ b/netlify.toml
@@ -531,3 +531,9 @@
   to = "https://amzn.to/3T3qVdw"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/86/"
+  to = "https://filezone.info/04ebd1a"
+  status = 301
+  force = true
