--- a/netlify.toml
+++ b/netlify.toml
@@ -544,3 +544,8 @@
   status = 301
   force = true
   
+  [[redirects]]
+  from = "/88/"
+  to = "https://amzn.to/3CXt5G3"
+  status = 301
+  force = true
