--- a/netlify.toml
+++ b/netlify.toml
@@ -561,3 +561,9 @@
   to = "https://amzn.to/3g5lkov"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/90/"
+  to = "https://amzn.to/3CWy6hZ"
+  status = 301
+  force = true
