--- a/netlify.toml
+++ b/netlify.toml
@@ -579,3 +579,9 @@
   to = "https://amzn.to/3fWQMoO"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/94/"
+  to = "https://amzn.to/3VFcvST"
+  status = 301
+  force = true
