--- a/netlify.toml
+++ b/netlify.toml
@@ -585,3 +585,9 @@
   to = "https://amzn.to/3VFcvST"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/95/"
+  to = "https://amzn.to/3EPNKNs"
+  status = 301
+  force = true
