--- a/netlify.toml
+++ b/netlify.toml
@@ -609,3 +609,9 @@
   to = "https://amzn.to/3Cy0shb"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/99/"
+  to = "https://amzn.to/3D1eWI7"
+  status = 301
+  force = true
