--- a/netlify.toml
+++ b/netlify.toml
@@ -639,3 +639,9 @@
   to = "https://amzn.to/3S7Matm"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/104/"
+  to = "https://amzn.to/3TuThgv"
+  status = 301
+  force = true
