--- a/netlify.toml
+++ b/netlify.toml
@@ -651,3 +651,9 @@
   to = "https://amzn.to/3TuThgv"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/106/"
+  to = "https://amzn.to/3EIKALD"
+  status = 301
+  force = true
