--- a/netlify.toml
+++ b/netlify.toml
@@ -663,3 +663,9 @@
   to = "https://amzn.to/3EIKALD"
   status = 301
   force = true
+  
+  [[redirects]]
+  from = "/108/"
+  to = "https://amzn.to/3EIKALD"
+  status = 301
+  force = true
