--- a/netlify.toml
+++ b/netlify.toml
@@ -681,3 +681,10 @@
   to = "https://amzn.to/3yKw5Ty"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/111/"
+  to = "https://amzn.to/3D5CgnR"
+  status = 301
+  force = true
+  
