--- a/netlify.toml
+++ b/netlify.toml
@@ -717,3 +717,9 @@
   to = "https://amzn.to/3VEDuOq"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/117/"
+  to = "https://amzn.to/3D5Raut"
+  status = 301
+  force = true
