--- a/netlify.toml
+++ b/netlify.toml
@@ -747,3 +747,9 @@
   to = "https://amzn.to/3s4fbf2"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/122/"
+  to = "https://amzn.to/3Tf2DNY"
+  status = 301
+  force = true
