--- a/netlify.toml
+++ b/netlify.toml
@@ -801,3 +801,9 @@
   to = "https://amzn.to/3VRt3Hp"
   status = 301
   force = true
+  
+  [[redirects]]
+  from = "/131/"
+  to = "https://amzn.to/3CNpQQb"
+  status = 301
+  force = true
