--- a/netlify.toml
+++ b/netlify.toml
@@ -825,3 +825,9 @@
   to = "https://amzn.to/3gbKrWG"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/135/"
+  to = "https://amzn.to/3gbKrWG"
+  status = 301
+  force = true
