--- a/netlify.toml
+++ b/netlify.toml
@@ -831,3 +831,9 @@
   to = "https://amzn.to/3gbKrWG"
   status = 301
   force = true
+  
+  [[redirects]]
+  from = "/136/"
+  to = "https://amzn.to/3gbKrWG"
+  status = 301
+  force = true
