--- a/netlify.toml
+++ b/netlify.toml
@@ -843,3 +843,10 @@
   to = "https://amzn.to/3gbKrWG"
   status = 301
   force = true
+
+
+  [[redirects]]
+  from = "/138/"
+  to = "https://amzn.to/3gbKrWG"
+  status = 301
+  force = true
