--- a/netlify.toml
+++ b/netlify.toml
@@ -844,9 +844,21 @@
   status = 301
   force = true
 
-
   [[redirects]]
   from = "/138/"
   to = "https://amzn.to/3gbKrWG"
+  status = 301
+  force = true
+
+  
+  [[redirects]]
+  from = "/139/"
+  to = "https://amzn.to/3gbKrWG"
+  status = 301
+  force = true
+  
+  [[redirects]]
+  from = "/140/"
+  to = "https://amzn.to/3CLFL1l"
   status = 301
   force = true
