--- a/netlify.toml
+++ b/netlify.toml
@@ -927,3 +927,9 @@
   to = "https://amzn.to/3CUgpyj"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/152/"
+  to = "https://amzn.to/3eRn0BQ  "
+  status = 301
+  force = true
