--- a/netlify.toml
+++ b/netlify.toml
@@ -930,6 +930,12 @@
 
   [[redirects]]
   from = "/152/"
-  to = "https://amzn.to/3eRn0BQ  "
+  to = "https://amzn.to/3eRn0BQ"
+  status = 301
+  force = true
+  
+  [[redirects]]
+  from = "/153/"
+  to = "https://amzn.to/3CUgpyj"
   status = 301
   force = true
