--- a/netlify.toml
+++ b/netlify.toml
@@ -1000,9 +1000,14 @@
   status = 301
   force = true
 
-
   [[redirects]]
   from = "/164/"
   to = "https://amzn.to/3VM3mI2"
+  status = 301
+  force = true
+  
+  [[redirects]]
+  from = "/165/"
+  to = "https://amzn.to/3Sjsi6F"
   status = 301
   force = true
