--- a/netlify.toml
+++ b/netlify.toml
@@ -32,7 +32,7 @@
   status = 301
   force = true
 
-[[redirects]]1
+[[redirects]]
   from = "/3/"
   to = "https://go.fiverr.com/visit/?bta=456298&brand=fiverrcpa&landingPage=https%3A%2F%2Fwww.fiverr.com%2Fsearch%2Fgigs%3Fquery%3Dmonte%2520carlo%26source%3Dtop-bar%26search_in%3Deverywhere%26search-autocomplete-original-term%3Dmonte%2520carlo"
   status = 301
@@ -750,7 +750,7 @@
 
   [[redirects]]
   from = "/122/"
-  to = "https://amzn.to/3Tf2DNY"
+  to = "http://sale.dhgate.com/CU5YFH24"
   status = 301
   force = true
 
