--- a/netlify.toml
+++ b/netlify.toml
@@ -1113,3 +1113,9 @@
   to = "https://www.humblebundle.com/store/noita?partner=ggdealz"
   status = 301
   force = true
+
+  [[redirects]]
+  from = "/183/"
+  to = "https://afflat3e1.com/lnk.asp?o=9851&c=918277&a=403969&k=11F3738D39B3DB2BE2C6EEBB46EC312D&l=9540"
+  status = 301
+  force = true
