--- a/netlify.toml
+++ b/netlify.toml
@@ -1119,3 +1119,9 @@
   to = "https://afflat3e1.com/lnk.asp?o=9851&c=918277&a=403969&k=11F3738D39B3DB2BE2C6EEBB46EC312D&l=9540"
   status = 301
   force = true
+  
+  [[redirects]]
+  from = "/184/"
+  to = "https://r.goaffmy.com/wtmLS7"
+  status = 301
+  force = true
