--- a/netlify.toml
+++ b/netlify.toml
@@ -1143,3 +1143,9 @@
   to = "https://www.humblebundle.com/store/tiny-tinas-wonderlands?partner=ggdealz"
   status = 301
   force = true
+  
+  [[redirects]]
+  from = "/188/"
+  to = "https://www.humblebundle.com/store/grim-dawn?partner=ggdealz"
+  status = 301
+  force = true
