--- a/netlify.toml
+++ b/netlify.toml
@@ -1115,8 +1115,15 @@
   force = true
 
   [[redirects]]
-  from = "/183/"
+  from = "/1833/"
   to = "https://afflat3e1.com/lnk.asp?o=9851&c=918277&a=403969&k=11F3738D39B3DB2BE2C6EEBB46EC312D&l=9540"
+  status = 301
+  force = true
+  
+  
+  [[redirects]]
+  from = "/183/"
+  to = "https://d96ednk4non83tzu2871qosp0z.hop.clickbank.net"
   status = 301
   force = true
   
